lots of enhancements, less cpu usage

--- a/package.json
+++ b/package.json
@@ -7,27 +7,28 @@
     "keywords": [],
     "author": "Josep Llodr\u00e0 Grimalt",
     "user-agent": "",
+    "chromium-args": "--enable-threaded-compositing",
     "window": {
         "fullscreen": false,
-        "kiosk_emulation": false,
-        "min_height": 400,
-        "resizable": true, 
+        "as_desktop": false,
+        "resizable": true,
         "title": "cmod3",
         "always-on-top": false,
-        "frame": true,
+        "frame": false,
         "show": true,
         "kiosk": false,
-        "height": 500,
-        "exe_icon": "",
+        "kiosk_emulation": false,
+        "min_height": 200,
         "visible": true,
-        "as_desktop": false,
-        "toolbar": true,
-        "min_width": 780,
+        "transparent": false,
+        "exe_icon": "icon.png",
+        "width": 770,
+        "min_width": 770,
         "position": "mouse",
         "show_in_taskbar": true,
-        "mac_icon": "",
-        "width": 800,
-        "transparent": false,
+        "height": 400,
+        "mac_icon": "icon.png",
+        "toolbar": true,
         "icon": "icon.png"
     },
     "version": "0.0.1",
