--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "angular": "~1.3.15",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "angular-ui-router": "~0.2.13"
   }
 }
