--- a/package.json
+++ b/package.json
@@ -1,68 +1,68 @@
 {
-  "app_name": "cmod3",
-  "nodejs": true,
-  "additional_trust_anchors": "",
-  "inject-js-end": "",
-  "node-remote": "",
-  "keywords": [],
-  "author": "Josep Llodrà Grimalt",
-  "user-agent": "",
-  "chromium-args": "--enable-threaded-compositing",
-  "window": {
-    "fullscreen": false,
-    "as_desktop": false,
-    "resizable": true,
-    "title": "cmod3",
-    "always-on-top": false,
-    "frame": false,
-    "show": true,
-    "kiosk": false,
-    "kiosk_emulation": false,
-    "min_height": 200,
-    "visible": true,
-    "transparent": false,
-    "exe_icon": "icon.png",
-    "width": 500,
-    "min_width": 490,
-    "position": "mouse",
-    "show_in_taskbar": true,
-    "height": 260,
-    "mac_icon": "icon.png",
-    "toolbar": false,
-    "icon": "icon.png"
-  },
-  "version": "0.0.5",
-  "inject-js-start": "",
-  "main": "index.html",
-  "node-main": "",
-  "webexe_settings": {
-    "linux-x32": false,
-    "windows-x64": false,
-    "download_dir": "/Users/josep/Projects/Web2Executable.app/Contents/Resources/files/downloads",
-    "nw_compression_level": 5,
-    "mac-x32": false,
-    "windows-x32": false,
-    "mac-x64": true,
-    "nw_version": "0.12.1",
-    "force_download": false,
-    "linux-x64": false
-  },
-  "description": "A module (mod, s3m, it, xm) desktop player",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./start.sh"
-  },
-  "webkit": {
-    "page-cache": false,
-    "java": false,
-    "plugin": false
-  },
-  "js-flags": "",
-  "name": "cmod3",
-  "license": "ISC",
-  "single-instance": true,
-  "snapshot": "",
-  "dependencies": {
-    "walkdir": "0.0.8"
-  }
+    "app_name": "cmod3", 
+    "nodejs": true, 
+    "additional_trust_anchors": "", 
+    "inject-js-end": "", 
+    "node-remote": "", 
+    "keywords": [], 
+    "author": "Josep Llodr\u00e0 Grimalt", 
+    "user-agent": "", 
+    "window": {
+        "fullscreen": false, 
+        "resizable": true, 
+        "title": "cmod3", 
+        "always-on-top": false, 
+        "frame": false, 
+        "show": true, 
+        "kiosk": false, 
+        "kiosk_emulation": false, 
+        "min_height": 200, 
+        "visible": true, 
+        "as_desktop": false, 
+        "width": 500, 
+        "mac_icon": "icon.png", 
+        "position": "mouse", 
+        "min_width": 490, 
+        "exe_icon": "icon.png", 
+        "show_in_taskbar": true, 
+        "height": 260, 
+        "transparent": false, 
+        "toolbar": false, 
+        "icon": "icon.png"
+    }, 
+    "version": "0.0.5", 
+    "inject-js-start": "", 
+    "main": "index.html", 
+    "node-main": "", 
+    "webexe_settings": {
+        "linux-x32": false, 
+        "windows-x64": true, 
+        "download_dir": "/Users/josep/Projects/Web2Executable.app/Contents/Resources/files/downloads", 
+        "nw_compression_level": 5, 
+        "mac-x32": false, 
+        "windows-x32": false, 
+        "mac-x64": true, 
+        "nw_version": "0.12.1", 
+        "force_download": false, 
+        "linux-x64": true
+    }, 
+    "description": "A module (mod, s3m, it, xm) desktop player", 
+    "dependencies": {
+        "walkdir": "0.0.8"
+    }, 
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1", 
+        "start": "./start.sh"
+    }, 
+    "webkit": {
+        "page-cache": false, 
+        "java": false, 
+        "plugin": false
+    }, 
+    "js-flags": "", 
+    "name": "cmod3", 
+    "license": "ISC", 
+    "single-instance": true, 
+    "snapshot": "", 
+    "chromium-args": "--enable-threaded-compositing"
 }
