--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "user-agent": "", 
     "window": {
         "fullscreen": false, 
+        "height": 260, 
         "resizable": true, 
-        "title": "cmod3", 
+        "show": true, 
         "always-on-top": false, 
         "frame": false, 
-        "show": true, 
+        "title": "cmod3", 
         "kiosk": false, 
         "kiosk_emulation": false, 
         "min_height": 200, 
         "visible": true, 
         "as_desktop": false, 
-        "width": 500, 
-        "mac_icon": "icon.png", 
-        "position": "mouse", 
-        "min_width": 490, 
-        "exe_icon": "icon.png", 
-        "show_in_taskbar": true, 
-        "height": 260, 
-        "transparent": false, 
         "toolbar": false, 
-        "icon": "icon.png"
+        "min_width": 490, 
+        "position": "mouse", 
+        "show_in_taskbar": true, 
+        "mac_icon": "icon.png", 
+        "icon": "icon.png", 
+        "width": 500, 
+        "transparent": false, 
+        "exe_icon": "icon.png"
     }, 
     "version": "0.0.5", 
     "inject-js-start": "", 
@@ -36,13 +36,14 @@
     "node-main": "", 
     "webexe_settings": {
         "linux-x32": false, 
+        "export_dir": "output", 
         "windows-x64": true, 
         "download_dir": "/Users/josep/Projects/Web2Executable.app/Contents/Resources/files/downloads", 
         "nw_compression_level": 5, 
         "mac-x32": false, 
         "windows-x32": false, 
         "mac-x64": true, 
-        "nw_version": "0.12.1", 
+        "nw_version": "0.12.2", 
         "force_download": false, 
         "linux-x64": true
     }, 
