play+pause in one button

--- a/package.json
+++ b/package.json
@@ -1,69 +1,73 @@
 {
-    "app_name": "cmod3", 
-    "nodejs": true, 
-    "additional_trust_anchors": "", 
-    "inject-js-end": "", 
-    "node-remote": "", 
-    "keywords": [], 
-    "author": "Josep Llodr\u00e0 Grimalt", 
-    "user-agent": "", 
-    "window": {
-        "fullscreen": false, 
-        "height": 260, 
-        "resizable": true, 
-        "show": true, 
-        "always-on-top": false, 
-        "frame": false, 
-        "title": "cmod3", 
-        "kiosk": false, 
-        "kiosk_emulation": false, 
-        "min_height": 200, 
-        "visible": true, 
-        "as_desktop": false, 
-        "toolbar": false, 
-        "min_width": 490, 
-        "position": "mouse", 
-        "show_in_taskbar": true, 
-        "mac_icon": "icon.png", 
-        "icon": "icon.png", 
-        "width": 500, 
-        "transparent": false, 
-        "exe_icon": "icon.png"
-    }, 
-    "version": "1.0", 
-    "inject-js-start": "", 
-    "main": "index.html", 
-    "node-main": "", 
-    "webexe_settings": {
-        "linux-x32": false, 
-        "export_dir": "output", 
-        "windows-x64": true, 
-        "download_dir": "/Users/josep/Projects/Web2Executable.app/Contents/Resources/files/downloads", 
-        "nw_compression_level": 5, 
-        "mac-x32": false, 
-        "windows-x32": false, 
-        "mac-x64": true, 
-        "nw_version": "0.12.2", 
-        "force_download": false, 
-        "linux-x64": true
-    }, 
-    "description": "A module (mod, s3m, it, xm) desktop player", 
-    "dependencies": {
-        "walkdir": "0.0.8"
-    }, 
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1", 
-        "start": "./start.sh"
-    }, 
-    "webkit": {
-        "page-cache": false, 
-        "java": false, 
-        "plugin": false
-    }, 
-    "js-flags": "", 
-    "name": "cmod3", 
-    "license": "ISC", 
-    "single-instance": true, 
-    "snapshot": "", 
-    "chromium-args": "--enable-threaded-compositing"
+  "app_name": "cmod3",
+  "nodejs": true,
+  "additional_trust_anchors": "",
+  "inject-js-end": "",
+  "node-remote": "",
+  "keywords": [],
+  "author": "Josep Llodrà Grimalt",
+  "user-agent": "",
+  "window": {
+    "fullscreen": false,
+    "height": 360,
+    "resizable": true,
+    "show": true,
+    "always-on-top": false,
+    "frame": true,
+    "title": "cmod3",
+    "kiosk": false,
+    "kiosk_emulation": false,
+    "min_height": 280,
+    "visible": true,
+    "as_desktop": false,
+    "toolbar": false,
+    "min_width": 490,
+    "position": "mouse",
+    "show_in_taskbar": true,
+    "mac_icon": "icon.png",
+    "icon": "icon.png",
+    "width": 500,
+    "transparent": false,
+    "exe_icon": "icon.png"
+  },
+  "version": "1.0.0",
+  "inject-js-start": "",
+  "main": "index.html",
+  "node-main": "",
+  "webexe_settings": {
+    "linux-x32": false,
+    "export_dir": "output",
+    "windows-x64": true,
+    "download_dir": "/Users/josep/Projects/Web2Executable.app/Contents/Resources/files/downloads",
+    "nw_compression_level": 5,
+    "mac-x32": false,
+    "windows-x32": false,
+    "mac-x64": true,
+    "nw_version": "0.12.2",
+    "force_download": false,
+    "linux-x64": true
+  },
+  "description": "A module (mod, s3m, it, xm) desktop player",
+  "dependencies": {
+    "walkdir": "0.0.10"
+  },
+  "devDependencies": {
+    "walkdir": "0.0.10"
+  },
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./start.sh"
+  },
+  "webkit": {
+    "page-cache": false,
+    "java": false,
+    "plugin": false
+  },
+  "js-flags": "",
+  "name": "cmod3",
+  "license": "ISC",
+  "single-instance": true,
+  "snapshot": "",
+  "chromium-args": "--enable-threaded-compositing"
 }
