--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "visible": true,
     "as_desktop": false,
     "toolbar": false,
-    "min_width": 490,
+    "min_width": 590,
     "position": "mouse",
     "show_in_taskbar": true,
     "mac_icon": "icon.png",
     "icon": "icon.png",
-    "width": 500,
+    "width": 590,
     "transparent": false,
     "exe_icon": "icon.png"
   },
-  "version": "1.0.0",
+  "version": "1.1.0",
   "inject-js-start": "",
   "main": "index.html",
   "node-main": "",
@@ -49,10 +49,9 @@
   },
   "description": "A module (mod, s3m, it, xm) desktop player",
   "dependencies": {
-    "walkdir": "0.0.10"
-  },
-  "devDependencies": {
-    "walkdir": "0.0.10"
+    "download": "^4.2.1",
+    "html-entities": "^1.1.3",
+    "walkdir": "^0.0.10"
   },
   "private": true,
   "scripts": {
