load more, settings localstorage, module cache directory, artist name

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "user-agent": "",
   "window": {
     "fullscreen": false,
-    "height": 360,
+    "height": 720,
     "resizable": true,
     "show": true,
     "always-on-top": false,
@@ -20,13 +20,13 @@
     "min_height": 280,
     "visible": true,
     "as_desktop": false,
-    "toolbar": false,
+    "toolbar": true,
     "min_width": 590,
     "position": "mouse",
     "show_in_taskbar": true,
     "mac_icon": "icon.png",
     "icon": "icon.png",
-    "width": 590,
+    "width": 640,
     "transparent": false,
     "exe_icon": "icon.png"
   },
