--- a/.jshintrc
+++ b/.jshintrc
@@ -26,6 +26,7 @@
 		"process"			: true,
 		"document"		: true,
 		"ompt"				: true,
-		"Int8Array"		: true
+		"Int8Array"		: true,
+		"Uint8Array"	: true
 	}
 }
