--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
 node_js:
   - "4.1"
-before_script:
+before_install:
   - npm install -g bower
+install:
+  - npm install
+  - bower install
