--- a/src/package.json
+++ b/src/package.json
@@ -55,7 +55,7 @@
   },
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No tests to run\" && exit 0",
     "start": "./start.sh"
   },
   "webkit": {
