--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js:
   - "4.1"
+sudo: required
 before_install:
-  - sudo apt-get install -y wine
+  - sudo apt-get install -qq -y wine
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
   - npm install -g bower
   - npm install -g nw-builder
   - mkdir -p cache/0.12.3 && mkdir builds
