--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ node_js:
   - "4.1"
 sudo: required
 before_install:
-  - sudo apt-get install -qq -y wine
+  #- wine
+  - sudo apt-get install -qq -y wine winetricks
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - mkdir -p $HOME/.wine/drive_c/windows
   - chmod -R 775 $HOME/.wine
+  - winetricks dotnet20
+  - winetricks mono28
+  #-
   - npm install -g bower
   - npm install -g nw-builder
   - mkdir -p cache/0.12.3 && mkdir builds
