--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ node_js:
   - "4.1"
 sudo: required
 before_install:
+  - sudo apt-get update
   #- wine
   - sudo apt-get install -qq -y wine winetricks
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - mkdir -p $HOME/.wine/drive_c/windows
   - chmod -R 775 $HOME/.wine
+  - WINEARCH=win32 winecfg
   - winetricks dotnet20
   - winetricks mono28
   #-
