--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ before_install:
   - sudo apt-get install -qq -y wine winetricks
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - mkdir -p $HOME/.wine/drive_c/windows
-  - chmod -R 775 $HOME/.wine
+  #- mkdir -p $HOME/.wine/drive_c/windows
+  #- chmod -R 775 $HOME/.wine
+  - rm -rf $HOME/.wine
   - WINEARCH=win32 winecfg
   - winetricks dotnet20
   - winetricks mono28
