--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get install -qq -y wine winetricks
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - env WINEARCH=win32 WINEPREFIX=~/.wine32 winetricks dotnet20
+  - env WINEARCH=win32 WINEPREFIX=~/.wine32 winetricks -q dotnet20
   #- mkdir -p $HOME/.wine/drive_c/windows
   #- chmod -R 775 $HOME/.wine
   #- rm -rf $HOME/.wine
