--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,13 @@ before_install:
   - sudo apt-get update
   #- wine
   - sudo apt-get install -qq -y wine winetricks
+  - sudo apt-get install wine-mono4.5.6\*
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - export WINEARCH=win32
   - export WINEPREFIX=~/.wine32
   - env WINEARCH=win32 WINEPREFIX=~/.wine32 winetricks -q dotnet20
-  - env WINEARCH=win32 WINEPREFIX=~/.wine32 winetricks -q mono28
+  #- env WINEARCH=win32 WINEPREFIX=~/.wine32 winetricks -q mono28
   #- mkdir -p $HOME/.wine/drive_c/windows
   #- chmod -R 775 $HOME/.wine
   #- rm -rf $HOME/.wine
