--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ node_js:
   - "4.1"
 sudo: required
 before_install:
+  - sudo add-apt-repository ppa:ubuntu-wine/ppa
   - sudo apt-get update
   #- wine
-  - sudo apt-get install -qq -y wine winetricks
-  - sudo apt-get install wine-mono4.5.6\*
+  - sudo apt-get install -qq -y wine1.7 wine-mono4.5.4 winetricks
+  #- sudo apt-get install -qq -y wine winetricks
+  #- sudo apt-get install -qq -y wine-mono4.5.6\*
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - export WINEARCH=win32
