travis trying to fix wine

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_install:
   - sudo add-apt-repository -y ppa:ubuntu-wine/ppa
   - sudo apt-get update
   #- wine
-  - sudo apt-get install -qq -y wine wine-mono winetricks
+  - apt-cache search wine-mono
+  - sudo apt-get install -qq -y wine wine-mono0.0.8 winetricks
   #- sudo apt-get install -qq -y wine1.7 wine-mono4.5.4 winetricks
   #- sudo apt-get install -qq -y wine winetricks
   #- sudo apt-get install -qq -y wine-mono4.5.6\*
