--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,12 @@ before_install:
   - sudo apt-get update
   #- wine
   - apt-cache search wine-mono
-  - sudo apt-get install -qq -y wine wine-mono0.0.8 winetricks
-  #- sudo apt-get install -qq -y wine1.7 wine-mono4.5.4 winetricks
-  #- sudo apt-get install -qq -y wine winetricks
-  #- sudo apt-get install -qq -y wine-mono4.5.6\*
+  - sudo apt-get install -qq -y wine wine-mono0.0.8 winetricks #mono 4.5.0 and 4.5.2
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - export WINEARCH=win32
   - export WINEPREFIX=~/.wine32
   - env WINEARCH=win32 WINEPREFIX=~/.wine32 winetricks -q dotnet20
-  #- env WINEARCH=win32 WINEPREFIX=~/.wine32 winetricks -q mono28
-  #- mkdir -p $HOME/.wine/drive_c/windows
-  #- chmod -R 775 $HOME/.wine
-  #- rm -rf $HOME/.wine
-  #- WINEARCH=win32 winecfg
-  #- winetricks -q dotnet20
-  #- winetricks -q mono28
   #-
   - npm install -g bower
   - npm install -g nw-builder
@@ -30,13 +20,17 @@ before_install:
   - cd cache/0.12.3
   - wget http://dl.nwjs.io/v0.12.3/nwjs-v0.12.3-linux-x64.tar.gz
   - wget http://dl.nwjs.io/v0.12.3/nwjs-v0.12.3-win-x64.zip
+  - wget http://dl.nwjs.io/v0.12.3/nwjs-v0.12.3-osx-x64.zip
   - tar xzf nwjs-v0.12.3-linux-x64.tar.gz && rm nwjs-v0.12.3-linux-x64.tar.gz
   - unzip nwjs-v0.12.3-win-x64.zip && rm nwjs-v0.12.3-win-x64.zip
+  - unzip nwjs-v0.12.3-osx-x64.zip && rm nwjs-v0.12.3-osx-x64.zip
   - mv nwjs-v0.12.3-linux-x64 linux64
   - mv nwjs-v0.12.3-win-x64 win64
+  - mv nwjs-v0.12.3-osx-x64 osx64
   - cd ../..
   - cp codecs-libs/libffmpegsumo.so cache/0.12.3/linux64
   - cp codecs-libs/ffmpegsumo.dll cache/0.12.3/win64
+  - cp codecs-libs/ffmpegsumo.so "cache/0.12.3/osx64/nwjs.app/Contents/Frameworks/nwjs Framework.framework/Libraries"
 install:
   - cd src
   - npm install
@@ -47,5 +41,12 @@ script:
   - ls -l cache
   - ls -l cache/0.12.3
   - ls -l cache/0.12.3/linux64
-  - nwbuild -p linux64 -v 0.12.3 --cacheDir ./cache --buildDir ./builds                     ./src | grep -v ^Zipping #quiet
-  - env WINEARCH=win32 WINEPREFIX=~/.wine32 nwbuild -p win64   -v 0.12.3 --cacheDir ./cache --buildDir ./builds --winIco ./icon.png ./src | grep -v ^Zipping #quiet
+  -                                         nwbuild -p linux64 -v 0.12.3 --cacheDir ./cache --buildDir ./builds                          ./src | grep -v ^Zipping #quiet
+  -                                         nwbuild -p osx64   -v 0.12.3 --cacheDir ./cache --buildDir ./builds --macIcns ./macicon.icns ./src | grep -v ^Zipping #quiet
+  - env WINEARCH=win32 WINEPREFIX=~/.wine32 nwbuild -p win64   -v 0.12.3 --cacheDir ./cache --buildDir ./builds --winIco  ./icon.png     ./src | grep -v ^Zipping #quiet
+  - pushd builds/cmod3
+  - zip -q -r cmod3-${VERSION}-osx64.zip cmod3-${VERSION}-osx64
+  - zip -q -r cmod3-${VERSION}-win64.zip cmod3-${VERSION}-win64
+  - zip -q -r cmod3-${VERSION}-linux64.zip cmod3-${VERSION}-linux64
+  - popd
+  - ls -l builds/cmod3
