--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
   - cp codecs-libs/ffmpegsumo.so "cache/0.12.3/osx64/nwjs.app/Contents/Frameworks/nwjs Framework.framework/Libraries"
 install:
   - cd src
-  - echo { "modarchive": "$modarchive" } > config.json
+  - echo \{ \"modarchive\": \"$modarchive\" \} > config.json
   - npm install
   - bower install
   - cd ..
